==> Oryx-Embedded/CycloneCRYPTO/hardware/max32690/max32690_crypto_pkc.c <==
#define TRACE_LEVEL CRYPTO_TRACE_LEVEL
#include "mxc_device.h"
#include "mxc_sys.h"
#include "ctb.h"
#include "core/crypto.h"
#include "hardware/max32690/max32690_crypto.h"
#include "hardware/max32690/max32690_crypto_pkc.h"
#include "ecc/ec.h"
#include "ecc/ec_misc.h"
#include "ecc/curve25519.h"
#include "ecc/curve448.h"
#include "mpi/mpi.h"
#include "debug.h"

void ecFieldMulMod(const EcCurve *curve, uint32_t *r, const uint32_t *a,
   const uint32_t *b)
{
   uint_t modLen;

   //Check elliptic curve parameters
   if(curve->fieldInv == NULL)
   {
      //Get the length of the modulus, in bits
      modLen = curve->fieldSize;

      //Acquire exclusive access to the CTB module
      osAcquireMutex(&max32690CryptoMutex);

      //Reset the engine by setting CTB_CTRL.rst
      MXC_CTB->ctrl = MXC_F_CTB_CTRL_RST;

      //Software must poll the CTB_CTRL.rst bit until it is set to 1 by hardware,
      //indicating the cryptographic accelerator is ready for use
      while((MXC_CTB->ctrl & MXC_F_CTB_CTRL_RDY) == 0)
      {
      }

      //Legacy support for the access behavior of the done flags
      MXC_CTB->ctrl |= MXC_F_CTB_CTRL_FLAG_MODE;

      //Specify the size of the modular operation
      MXC_CTB->maa_maws = modLen;

      //Copy the first operand
      maaImportScalar(CTB_MAA_MEM_INSTANCE_0, a, modLen);
      //Copy the second operand
      maaImportScalar(CTB_MAA_MEM_INSTANCE_1, b, modLen);
      //The modulus is always stored in memory instance 5
      maaImportScalar(CTB_MAA_MEM_INSTANCE_5, curve->p, modLen);

      //Set up a modular multiplication operation
      MXC_CTB->maa_ctrl = CTB_MAA_CTRL_TMA(6) | CTB_MAA_CTRL_RMA(4) |
         CTB_MAA_CTRL_BMA(2) | CTB_MAA_CTRL_AMA(0) |
         CTB_MAA_CTRL_CALC(CTB_MAA_CTRL_CALC_MOD_MUL_Val);

      //Start MAA operation
      MXC_CTB->maa_ctrl |= CTB_MAA_CTRL_START_Msk;

      //Wait for the MAA operation to complete
      while((MXC_CTB->ctrl & TB_CTRL_MAA_DONE_Msk) == 0)
      {
      }

      //Copy the result
      maaExportScalar(CTB_MAA_MEM_INSTANCE_2, r, modLen);

      //Release exclusive access to the CTB module
      osReleaseMutex(&max32690CryptoMutex);
   }
   else
   {
      uint32_t u[EC_MAX_MODULUS_SIZE * 2];

      //Get the length of the modulus, in words
      modLen = (curve->fieldSize + 31) / 32;

      //Compute R = (A * B) mod p
      ecScalarMul(u, u + modLen, a, b, modLen);
      curve->fieldMod(curve, r, u);
   }
}

void ecFieldSqrMod(const EcCurve *curve, uint32_t *r, const uint32_t *a)
{
   uint_t modLen;

   //Check elliptic curve parameters
   if(curve->fieldInv == NULL)
   {
      //Get the length of the modulus, in bits
      modLen = curve->fieldSize;

      //Acquire exclusive access to the CTB module
      osAcquireMutex(&max32690CryptoMutex);

      //Reset the engine by setting CTB_CTRL.rst
      MXC_CTB->ctrl = MXC_F_CTB_CTRL_RST;

      //Software must poll the CTB_CTRL.rst bit until it is set to 1 by hardware,
      //indicating the cryptographic accelerator is ready for use
      while((MXC_CTB->ctrl & MXC_F_CTB_CTRL_RDY) == 0)
      {
      }

      //Legacy support for the access behavior of the done flags
      MXC_CTB->ctrl |= MXC_F_CTB_CTRL_FLAG_MODE;

      //Specify the size of the modular operation
      MXC_CTB->maa_maws = modLen;

      //Copy the operand
      maaImportScalar(CTB_MAA_MEM_INSTANCE_1, a, modLen);
      //The modulus is always stored in memory instance 5
      maaImportScalar(CTB_MAA_MEM_INSTANCE_5, curve->p, modLen);

      //Set up a modular square operation
      MXC_CTB->maa_ctrl = CTB_MAA_CTRL_TMA(6) | CTB_MAA_CTRL_RMA(4) |
         CTB_MAA_CTRL_BMA(2) | CTB_MAA_CTRL_AMA(0) |
         CTB_MAA_CTRL_CALC(CTB_MAA_CTRL_CALC_MOD_SQR_Val);

      //Start MAA operation
      MXC_CTB->maa_ctrl |= CTB_MAA_CTRL_START_Msk;

      //Wait for the MAA operation to complete
      while((MXC_CTB->ctrl & TB_CTRL_MAA_DONE_Msk) == 0)
      {
      }

      //Copy the result
      maaExportScalar(CTB_MAA_MEM_INSTANCE_2, r, modLen);

      //Release exclusive access to the CTB module
      osReleaseMutex(&max32690CryptoMutex);
   }
   else
   {
      uint32_t u[EC_MAX_MODULUS_SIZE * 2];

      //Get the length of the modulus, in words
      modLen = (curve->fieldSize + 31) / 32;

      //Compute R = (A ^ 2) mod p
      ecScalarSqr(u, a, modLen);
      curve->fieldMod(curve, r, u);
   }
}

void ecScalarMulMod(const EcCurve *curve, uint32_t *r, const uint32_t *a,
   const uint32_t *b)
{
   uint_t orderLen;

   //Get the length of the order, in bits
   orderLen = curve->orderSize;

   //Acquire exclusive access to the CTB module
   osAcquireMutex(&max32690CryptoMutex);

   //Reset the engine by setting CTB_CTRL.rst
   MXC_CTB->ctrl = MXC_F_CTB_CTRL_RST;

   //Software must poll the CTB_CTRL.rst bit until it is set to 1 by hardware,
   //indicating the cryptographic accelerator is ready for use
   while((MXC_CTB->ctrl & MXC_F_CTB_CTRL_RDY) == 0)
   {
   }

   //Legacy support for the access behavior of the done flags
   MXC_CTB->ctrl |= MXC_F_CTB_CTRL_FLAG_MODE;

   //Specify the size of the modular operation
   MXC_CTB->maa_maws = orderLen;

   //Copy the first operand
   maaImportScalar(CTB_MAA_MEM_INSTANCE_0, a, orderLen);
   //Copy the second operand
   maaImportScalar(CTB_MAA_MEM_INSTANCE_1, b, orderLen);
   //The modulus is always stored in memory instance 5
   maaImportScalar(CTB_MAA_MEM_INSTANCE_5, curve->q, orderLen);

   //Set up a modular multiplication operation
   MXC_CTB->maa_ctrl = CTB_MAA_CTRL_TMA(6) | CTB_MAA_CTRL_RMA(4) |
      CTB_MAA_CTRL_BMA(2) | CTB_MAA_CTRL_AMA(0) |
      CTB_MAA_CTRL_CALC(CTB_MAA_CTRL_CALC_MOD_MUL_Val);

   //Start MAA operation
   MXC_CTB->maa_ctrl |= CTB_MAA_CTRL_START_Msk;

   //Wait for the MAA operation to complete
   while((MXC_CTB->ctrl & TB_CTRL_MAA_DONE_Msk) == 0)
   {
   }

   //Copy the result
   maaExportScalar(CTB_MAA_MEM_INSTANCE_2, r, orderLen);

   //Release exclusive access to the CTB module
   osReleaseMutex(&max32690CryptoMutex);
}

void ecScalarSqrMod(const EcCurve *curve, uint32_t *r, const uint32_t *a)
{
   uint_t orderLen;

   //Get the length of the order, in bits
   orderLen = curve->orderSize;

   //Acquire exclusive access to the CTB module
   osAcquireMutex(&max32690CryptoMutex);

   //Reset the engine by setting CTB_CTRL.rst
   MXC_CTB->ctrl = MXC_F_CTB_CTRL_RST;

   //Software must poll the CTB_CTRL.rst bit until it is set to 1 by hardware,
   //indicating the cryptographic accelerator is ready for use
   while((MXC_CTB->ctrl & MXC_F_CTB_CTRL_RDY) == 0)
   {
   }

   //Legacy support for the access behavior of the done flags
   MXC_CTB->ctrl |= MXC_F_CTB_CTRL_FLAG_MODE;

   //Specify the size of the modular operation
   MXC_CTB->maa_maws = orderLen;

   //Copy the operand
   maaImportScalar(CTB_MAA_MEM_INSTANCE_1, a, orderLen);
   //The modulus is always stored in memory instance 5
   maaImportScalar(CTB_MAA_MEM_INSTANCE_5, curve->q, orderLen);

   //Set up a modular square operation
   MXC_CTB->maa_ctrl = CTB_MAA_CTRL_TMA(6) | CTB_MAA_CTRL_RMA(4) |
      CTB_MAA_CTRL_BMA(2) | CTB_MAA_CTRL_AMA(0) |
      CTB_MAA_CTRL_CALC(CTB_MAA_CTRL_CALC_MOD_SQR_Val);

   //Start MAA operation
   MXC_CTB->maa_ctrl |= CTB_MAA_CTRL_START_Msk;

   //Wait for the MAA operation to complete
   while((MXC_CTB->ctrl & TB_CTRL_MAA_DONE_Msk) == 0)
   {
   }

   //Copy the result
   maaExportScalar(CTB_MAA_MEM_INSTANCE_2, r, orderLen);

   //Release exclusive access to the CTB module
   osReleaseMutex(&max32690CryptoMutex);
}
